# quant-research-workbench

./: .gitignore  AGENTS.md  README.md  TASK_HISTORY.csv  TASK_HISTORY.md  agent.md  alpha_core.py  debug_tools.py  entry_logic.py  leader_logic.py  main.py  market_tools.py  orb_core.py  order_tags.py  position_management.py  requirements.txt  risk_tools.py  state.py
.streamlit/: config.toml
docs/: README.md  current_state.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
notebooks/: test_backtest_data.ipynb
pipelines/: README.md  __init__.py
quant_connect/: indicator_tools.py  main.py  orb_core.py  risk_tools.py  state.py
research/: __init__.py
research/mlops/rolling_loader/rust_chrono_loader/: Cargo.toml
research/mlops/rolling_loader/rust_chrono_loader/src/: lib.rs
scripts/: copy_flatfiles_g_to_d_2019_2020.ps1  install_rust_windows.ps1  render_task_history.py  run_after_hours_maintenance.ps1  run_backend.ps1  run_ibkr_gateway_supervisor.ps1  run_market_ai.ps1  run_news_gateway.ps1  run_news_intelligence.ps1  run_news_llm_vllm.ps1  run_qmd_gateway.ps1  run_qmd_history_gateway.ps1  run_reference_gateway.ps1  run_sec_gateway.ps1  run_text_embed_gateway.ps1
services/qmd-gateway/: Cargo.toml  README.md
services/qmd-gateway/docs/: ARCHITECTURE.md  CONFIGURATION.md  DATA_CONTRACTS.md  DESIGN_GUIDE.md  OPERATIONS.md  QMD_LIQUIDITY_SUPPORT_STRUCTURE.md  README.md  SCANNER_AND_SIGNALS.md
services/qmd-gateway/src/: api.rs  bars.rs  clickhouse.rs  compact_event.rs  config.rs  event.rs  flatfile.rs  gapfill.rs  generic_structure.rs  indicator_catalog.rs  indicators.rs  intraday_bars.rs  lib.rs  live_market_state.rs  main.rs  maintenance.rs  market_calendar.rs  market_products.rs  massive.rs  metrics.rs  microstructure_forecast.rs  microstructure_interval.rs  model_bars.rs  qmd_episode.rs  reference_tradability.rs  replay.rs  scanner.rs  session.rs  signal_catalog.rs  state.rs  timefmt.rs
services/qmd-gateway/tools/: qmd_terminal.py  test_qmd_terminal.py
services/qmd_history_gateway/: Cargo.toml  README.md  __init__.py  app.py  run.py  store.py
services/qmd_history_gateway/src/: api.rs  cache.rs  config.rs  main.rs  source.rs
services/sec-gateway/: Cargo.toml  README.md
services/sec-gateway/docs/: SEC_CORE_DATABASE_DESIGN.md
services/sec-gateway/src/: api.rs  clickhouse.rs  config.rs  main.rs  model.rs  sec.rs  state.rs
src/: __init__.py
(+2207 files in other folders)
