[package]
name = "sec-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
blake2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2"
futures-util = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
