[package]
name = "rolling_loader_rust"
version = "0.4.0"
edition = "2021"

[lib]
name = "rolling_loader_rust"
crate-type = ["cdylib"]

[dependencies]
arrow-array = "59.1.0"
parquet = { version = "59.1.0", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
